add UI layouts and adapter

--- a/app/src/main/res/navigation/app_graph.xml
+++ b/app/src/main/res/navigation/app_graph.xml
@@ -10,6 +10,16 @@
         android:id="@+id/listFragment"
         android:name="ru.skillfactory.rentateam.presentation.list.ListFragment"
         android:label="fragment_list"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_open_item"
+            app:destination="@id/itemFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/itemFragment"
+        android:name="ru.skillfactory.rentateam.presentation.item.ItemFragment"
+        android:label="fragment_item"
+        tools:layout="@layout/fragment_item" />
 
 </navigation>
