--- a/app/src/main/res/navigation/app_graph.xml
+++ b/app/src/main/res/navigation/app_graph.xml
@@ -8,9 +8,9 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="ru.skillfactory.rentateam.presentation.list.ListFragment"
         android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
+        android:name="ru.skillfactory.rentateam.presentation.list.ListFragment"
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_open_item"
             app:destination="@id/itemFragment" />
@@ -18,8 +18,13 @@
 
     <fragment
         android:id="@+id/itemFragment"
-        android:name="ru.skillfactory.rentateam.presentation.item.ItemFragment"
         android:label="fragment_item"
-        tools:layout="@layout/fragment_item" />
+        android:name="ru.skillfactory.rentateam.presentation.item.ItemFragment"
+        tools:layout="@layout/fragment_item">
 
+        <argument
+            android:name="user"
+            app:argType="ru.skillfactory.rentateam.domain.model.User" />
+
+    </fragment>
 </navigation>
