--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="spacing">16dp</dimen>
     <dimen name="user_item_icon">48dp</dimen>
+
+    <dimen name="container_padding">48dp</dimen>
+    <dimen name="detail_user_icon_size">120dp</dimen>
+
 </resources>
