--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
 
     <dimen name="container_padding">48dp</dimen>
     <dimen name="detail_user_icon_size">120dp</dimen>
+    <dimen name="vertical_margin">16dp</dimen>
 
 </resources>
